# prisma-automation

./: .env.template  .gitignore  Makefile  README.md  config.json  prisma.py  pyproject.toml
docs/: API_INTEGRATION.md  CONFIGURATION.md  README.md  SCOPUS_API_README.md
models/: screening_model.pkl  test_screening_model.pkl
output/screening_test/: active_learning_samples.csv  ml_screening.csv  rule_based_screening.csv  screening_results.csv
scripts/: check_packages.py  deduplicate.py  screening.py
search_terms/: embase_search_term.txt  pubmed_search_term.txt  scopus_search_term.txt
search_terms/seed_labels/: README.md  pubmed_test_labels.csv  seed_labels.csv
src/python/: cli.py  config_loader.py  embase_api.py  ml_screening.py  pubmed_api.py  scopus_api.py
src/python/ml_models/: __init__.py  active_learning.py  base_model.py  cross_validation.py  ensemble_model.py  feature_engineering.py  imbalance_handler.py  random_forest_model.py
tests/: simple_scopus_test.py  test_pubmed.py  test_scopus.py  test_scopus_simple.py  test_search_terms.py
