[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma-automation"
version = "0.1.0"
description = "PRISMA workflow automation with Python and R"
readme = "README.md"
authors = [
    {name = "User", email = "user@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "requests",
    "pandas",
    "pybtex",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
